# teachcompute

./: .build_path.txt  .gitignore  CHANGELOGS.rst  README.rst  appveyor.yml  azure-pipelines.yml  clean_build.sh  clean_onnx.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: check-release.yml  check-urls.yml  documentation.yml  mypy.yml  rstcheck.yml  tutorials.yml  wheels-any.yml  wheels-linux.yml  wheels-mac.yml  wheels-windows.yml
_cmake/: CMakeLists.txt  clang_format.sh  constants.cmake  finalize.cmake  intrin.sh  load_externals.cmake
_cmake/targets/: _validation.cmake  _validation_cuda_example_py.cmake  _validation_cuda_gemm.cmake  _validation_cuda_monitor.cmake  common.cmake  direct_blas_lapack_cy.cmake  dot_blas_lapack.cmake  dot_cython.cmake  experiment_cython.cmake  torch_extensions.cmake  vector_function_cy.cmake
_doc/: build.rst  build_cuda.rst  build_cython.rst  build_pybind11.rst  build_torch_extensions.rst  conf.py  i_faq.rst  i_index.rst  index.rst  index_dot.rst  index_expose.rst  index_filter.rst  index_process.rst  index_spark.rst  index_torch.rst  index_vector_cuda.rst  index_vector_sum.rst  introduction.rst  notebook_gallery.rst  sg_execution_times.rst
_doc/api/: args.rst  check.rst  datasets.rst  ext_test_case.rst  fctmr.rst  index.rst  memory_peak.rst  models.rst  torch_extensions.rst  validation.rst  validation_cpu.rst  validation_cuda.rst  validation_cython.rst
_doc/articles/: 2023-05-31-route2023-gpu.rst  2023-11-31-route2023.rst  2024-05-31-route2024-gpu.rst  2024-06-01-gemm-gpu.rst  2025-05-31-route2025.rst  2025-11-05-spark-3a.rst  2026-04-30-route2026.rst  index.rst
_doc/examples/: plot_bench_cpu_vector_sum.py  plot_bench_cpu_vector_sum_avx_parallel.py  plot_bench_cpu_vector_sum_parallel.py  plot_bench_cuda_gemm.py  plot_bench_cuda_vector_add.py  plot_bench_cuda_vector_add_stream.py  plot_bench_cuda_vector_sum.py  plot_benchmark_associative.py  plot_benchmark_dot.py  plot_benchmark_dot_cython.py  plot_benchmark_dot_cython_omp.py  plot_benchmark_dot_mul.py  plot_benchmark_dot_mul_timeit.py  plot_benchmark_filter.py  plot_benchmark_long_parallel_process_joblib.py  plot_benchmark_parallel_process_concurrent.py  plot_check_random_order.py  plot_export_model_onnx.py  plot_piecewise_linear.py  plot_serialisation_examples.py
_doc/practice/: index_expose.rst  index_mapreduce.rst  index_spark.rst
_doc/practice/expose/: hash_distribution.ipynb
_doc/practice/mapreduce/: recursive_reducers.ipynb  reservoir_sampling.ipynb  skewdata_reduce.ipynb  skewed_dataset.ipynb  skewed_dataset_correction.ipynb  sql_map_reduce.ipynb
_doc/practice/spark/: spark_first_steps.ipynb  spark_matrix_3_columns.ipynb  spark_mllib.ipynb
_tutoriels/cython1/: primes.pyx  setup.py
_tutoriels/cython2/: c_primes.cpp  c_primes.h  primes.pyx  setup.py
_tutoriels/cython3/: dotcy.pyx  setup.py
_tutoriels/cython4/: dotcy.pyx
_tutoriels/cython_mat/: benchmark.py  mmat.pyx  mmat_impl.cpp  mmat_impl.h  setup.py  test_mmat.py
_tutoriels/nanobind/: dotnanobind.cpp  setup.py
_tutoriels/numba1/: dotnumba.py
_tutoriels/pybind11/: dot11.cpp  setup.py
_tutoriels/python1/: README.rst  setup.py  test_python1.py
_tutoriels/python1/python1/: __init__.py  operations.py
_unittests/: teachcompute_test_common.h  test_constants.h
_unittests/ut_datasets/: test_eurostat.py
_unittests/ut_fctmr/: test_fast_parallel_fctmr.py  test_fctmr.py  test_pyparallel_fctmr.py
_unittests/ut_torch_extensions/: test_fcts_piecewise_linear.py
_unittests/ut_torch_models/: test_llama.py  test_mistral.py  test_phi.py
_unittests/ut_validation/: test_blas_lapack.py  test_cuda_monitor.py  test_dot.py  test_dot_omp.py  test_example_threads.py  test_experiment.py  test_filter.py  test_gemm_cuda.py  test_mul.py  test_speed_metrics.py  test_vector_cuda.py  test_vector_sum.cpp  test_vector_sum.py
_unittests/ut_xrun_doc/: test_args.py  test_documentation_examples.py  test_documentation_notebook.py  test_log.py  test_measure_time.py  test_memory_peak.py  test_normalize_notebook.py
teachcompute/: __init__.py  _config.py  ext_test_case.py  memory_peak.py
teachcompute/cpp/: teachcompute_helpers.cpp
teachcompute/cpp/include/: teachcompute_helpers.h
teachcompute/datasets/: __init__.py  eurostat.py
teachcompute/fctmr/: __init__.py  fast_parallel_fctmr.py  pyparallel_fctmr.py  simplefctmr.py
teachcompute/torch_extensions/: piecewise_linear.py  piecewise_linear_c.cpp
teachcompute/torch_models/: llama_helper.py  mistral_helper.py  phi_helper.py  training_helper.py
teachcompute/validation/cpu/: _validation.cpp  cpu_fpemu.hpp  example_threads.cpp  example_threads.h  thread_sum.cpp  thread_sum.h  vector_sum.cpp
teachcompute/validation/cuda/: __init__.py  cuda_example.cu  cuda_example.cuh  cuda_example_py.cpp  cuda_example_reduce.cuh  cuda_experiment.cu  cuda_experiment.cuh  cuda_gemm.cpp  cuda_gemm.cu  cuda_gemm.cuh  cuda_tensor.cu  cuda_tensor.cuh  cuda_utils.h
teachcompute/validation/cython/: direct_blas_lapack_cy.cpp  dot_blas_lapack.pyx  dot_cython.pyx  dot_cython_.cpp  dot_cython_.h  dot_cython_omp.pyx  dot_cython_omp_.cpp  dot_cython_omp_.h  experiment_cython.pyx  experiment_cython_.cpp  experiment_cython_.h  mul_cython_omp.pyx  mul_cython_omp_.cpp  td_mul_cython.pyx  td_mul_cython_.cpp  td_mul_cython_.h  vector_function_cy.cpp  vector_function_cy.pyx
